--- a/Patterns_Behavioral_CommandPattern_01/Patterns_Behavioral_CommandPattern_01.csproj
+++ b/Patterns_Behavioral_CommandPattern_01/Patterns_Behavioral_CommandPattern_01.csproj
@@ -42,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloseSwitchCommand.cs" />
+    <Compile Include="ICommand.cs" />
+    <Compile Include="ISwitchable.cs" />
+    <Compile Include="Light.cs" />
+    <Compile Include="OpenSwitchCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Switch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
