--- a/Design_Patterns_Behavioral_Command_06/Design_Patterns_Behavioral_Command_06.csproj
+++ b/Design_Patterns_Behavioral_Command_06/Design_Patterns_Behavioral_Command_06.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Command\ICommand.cs" />
     <Compile Include="Invoker\AccountInvoker.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receiver\Employee.cs" />
     <Compile Include="Receiver\GoldLevelEmployee.cs" />
